# walking_on_sunshine

./: .gitignore  Makefile  Procfile  README.md  TECHNICAL.md  config.yml  main.py  package-lock.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: lint.yml  test.yml
walking_on_sunshine/: main.py  test_noop.py
walking_on_sunshine/api/: api.py  app_router.py  config.py  server.py
walking_on_sunshine/api/templates/: item.html
walking_on_sunshine/app/: album_length.py  app.py  config.py  path_gen.py  path_gen_tests.py  test_path_gen.py
walking_on_sunshine/command/: __init__.py  config.py  get_album_length_cmd.py  hello_cmd.py  root.py  serve_cmd.py  start_cmd.py  test_get_album_lenght_cmd.py  test_get_album_length_cmd.py
walking_on_sunshine/common/logging/: logger.py  logger_script.py
walking_on_sunshine/frontend/: README.md
walking_on_sunshine/frontend/src/assets/scripts/: main.js
walking_on_sunshine/frontend/src/assets/styles/: main.css
walking_on_sunshine/frontend/src/components/: index.html
walking_on_sunshine/frontend/src/scripts/: main.js
walking_on_sunshine/scripts/: classes_playground.py  index.html  openroute_script.py
