[project]
name = "walking-on-sunshine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "python-dotenv>=1.1.1",
    "spotipy>=2.25.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "walking_on_sunshine.main:main"

[tool.ruff]
line-length = 120

[[tool.mypy.overrides]]
module = ["spotipy.*"]
ignore_missing_imports = true
